NetBSD Problem Report #48366

From t-hash@abox3.so-net.ne.jp  Mon Nov  4 08:00:13 2013
Return-Path: <t-hash@abox3.so-net.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B369AA610C
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  4 Nov 2013 08:00:08 +0000 (UTC)
Message-Id: <201311040800.rA4804FH030621@ms-omx11.plus.so-net.ne.jp>
Date: Mon, 04 Nov 2013 17:00:04 +0900
From: Takahiro HAYASHI <t-hash@abox3.so-net.ne.jp>
To: gnats-bugs@gnats.NetBSD.org
Subject: xhci without DIAGNOSTIC may panic

>Number:         48366
>Category:       kern
>Synopsis:       xhci without DIAGNOSTIC may panic
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Nov 04 08:05:00 +0000 2013
>Closed-Date:    Tue Nov 05 06:14:55 +0000 2013
>Last-Modified:  Tue Nov 05 06:14:55 +0000 2013
>Originator:     Takahiro HAYASHI
>Release:        NetBSD 6.99.25 (2013.11.03.08.51.23 UTC)
>Organization:
>Environment:
System: NetBSD ruin 6.99.25 NetBSD 6.99.25 (UNION) #3: Sun Nov  3 19:07:53 JST 2013 root@halt:/build/head/obj.amd64/sys/arch/amd64/compile/UNION amd64
Architecture: x86_64
Machine: amd64
>Description:
	kernel built without DIAGNOSTIC may panic around xhci.

	xhci_allocx() fills allocated xfer memory with zero only with
	DIAGNOSTIC, but {u,o,e}hci_allocx() always do.
	xhci_allocx() should do it always too, or allocated memory
	is uninitialized if not DIAGNOSTIC defined.

>How-To-Repeat:

>Fix:
	Please move memset() out of #ifdef DIAGNOSTIC in xhci_allocx()
	if you want to build kernel w/o DIAGNOSTIC.

--
t-hash

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48366 CVS commit: src/sys/dev/usb
Date: Mon, 4 Nov 2013 08:08:58 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Mon Nov  4 08:08:58 UTC 2013

 Modified Files:
 	src/sys/dev/usb: xhci.c

 Log Message:
 PR/48366 Always zero the allocated memory in xhci_alloc, not just in
 DIAGNOSTIC.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/sys/dev/usb/xhci.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 05 Nov 2013 06:14:55 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.