PR/48366 Always zero the allocated memory in xhci_alloc, not just in DIAGNOSTIC.